feat: publish Bukkit-compatible plugin builds