@@ -4,56 +4,78 @@ import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
-import io.papermc.paper.event.player.AsyncChatEvent;
+import java.io.BufferedReader;
 import java.io.File;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.OutputStream;
 import java.io.RandomAccessFile;
+import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.time.Duration;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicBoolean;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.format.NamedTextColor;
-import net.kyori.adventure.text.format.TextDecoration;
-import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
 import org.bukkit.Bukkit;
+import org.bukkit.ChatColor;
 import org.bukkit.configuration.file.YamlConfiguration;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.EventPriority;
 import org.bukkit.event.Listener;
+import org.bukkit.event.player.AsyncPlayerChatEvent;
 import org.bukkit.event.player.PlayerJoinEvent;
 import org.bukkit.event.player.PlayerQuitEvent;
 import org.bukkit.plugin.java.JavaPlugin;
 import org.bukkit.scheduler.BukkitTask;
 
 public final class ChatBridgePlugin extends JavaPlugin implements Listener {
-    private record OutgoingLine(String id, String kind, String player, String message, List<String> players) {}
-    private record LogBatch(long start, long end, List<String> lines) {}
-    private static final Map<String, NamedTextColor> COLORS = Map.ofEntries(
-        Map.entry("black", NamedTextColor.BLACK), Map.entry("dark_blue", NamedTextColor.DARK_BLUE),
-        Map.entry("dark_green", NamedTextColor.DARK_GREEN), Map.entry("dark_aqua", NamedTextColor.DARK_AQUA),
-        Map.entry("dark_red", NamedTextColor.DARK_RED), Map.entry("dark_purple", NamedTextColor.DARK_PURPLE),
-        Map.entry("gold", NamedTextColor.GOLD), Map.entry("gray", NamedTextColor.GRAY),
-        Map.entry("dark_gray", NamedTextColor.DARK_GRAY), Map.entry("blue", NamedTextColor.BLUE),
-        Map.entry("green", NamedTextColor.GREEN), Map.entry("aqua", NamedTextColor.AQUA),
-        Map.entry("red", NamedTextColor.RED), Map.entry("light_purple", NamedTextColor.LIGHT_PURPLE),
-        Map.entry("yellow", NamedTextColor.YELLOW), Map.entry("white", NamedTextColor.WHITE)
-    );
+    private static final class OutgoingLine {
+        private final String id;
+        private final String kind;
+        private final String player;
+        private final String message;
+        private final List<String> players;
+        private OutgoingLine(String id, String kind, String player, String message, List<String> players) {
+            this.id = id; this.kind = kind; this.player = player; this.message = message; this.players = players;
+        }
+        private String id() { return id; }
+        private String kind() { return kind; }
+        private String player() { return player; }
+        private String message() { return message; }
+        private List<String> players() { return players; }
+    }
+    private static final class LogBatch {
+        private final long start;
+        private final long end;
+        private final List<String> lines;
+        private LogBatch(long start, long end, List<String> lines) { this.start = start; this.end = end; this.lines = lines; }
+        private long start() { return start; }
+        private long end() { return end; }
+        private List<String> lines() { return lines; }
+    }
+    private static final Map<String, ChatColor> COLORS = new HashMap<String, ChatColor>();
+    static {
+        COLORS.put("black", ChatColor.BLACK); COLORS.put("dark_blue", ChatColor.DARK_BLUE);
+        COLORS.put("dark_green", ChatColor.DARK_GREEN); COLORS.put("dark_aqua", ChatColor.DARK_AQUA);
+        COLORS.put("dark_red", ChatColor.DARK_RED); COLORS.put("dark_purple", ChatColor.DARK_PURPLE);
+        COLORS.put("gold", ChatColor.GOLD); COLORS.put("gray", ChatColor.GRAY);
+        COLORS.put("dark_gray", ChatColor.DARK_GRAY); COLORS.put("blue", ChatColor.BLUE);
+        COLORS.put("green", ChatColor.GREEN); COLORS.put("aqua", ChatColor.AQUA);
+        COLORS.put("red", ChatColor.RED); COLORS.put("light_purple", ChatColor.LIGHT_PURPLE);
+        COLORS.put("yellow", ChatColor.YELLOW); COLORS.put("white", ChatColor.WHITE);
+    }
     private final ConcurrentLinkedQueue<OutgoingLine> pending = new ConcurrentLinkedQueue<>();
     private final AtomicLong sequence = new AtomicLong();
     private final AtomicBoolean polling = new AtomicBoolean();
     private final String runId = UUID.randomUUID().toString().replace("-", "");
-    private HttpClient http;
     private URI endpoint;
     private String key;
     private String epoch = "";
@@ -84,9 +106,8 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
         aqqbotDataFile = new File(dataPath).isAbsolute() ? new File(dataPath) : new File(getDataFolder(), dataPath);
         String logPath = getConfig().getString("server-log-path", "../../logs/latest.log");
         serverLogFile = new File(logPath).isAbsolute() ? new File(logPath) : new File(getDataFolder(), logPath);
-        http = HttpClient.newBuilder().connectTimeout(Duration.ofSeconds(5)).build();
         Bukkit.getPluginManager().registerEvents(this, this);
-        queue("start", "", "", List.of());
+        queue("start", "", "", Collections.<String>emptyList());
         task = Bukkit.getScheduler().runTaskTimerAsynchronously(this, this::poll, 20L, 20L);
         getLogger().info("聊天桥接已启用；插件主动连接网页程序，不开放新的 MC 端口。");
     }
@@ -97,11 +118,11 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
     }
 
     @EventHandler(priority = EventPriority.MONITOR, ignoreCancelled = true)
-    public void onPlayerChat(AsyncChatEvent event) {
+    public void onPlayerChat(AsyncPlayerChatEvent event) {
         String player = event.getPlayer().getName();
-        String message = PlainTextComponentSerializer.plainText().serialize(event.message()).trim();
+        String message = event.getMessage().trim();
         if (message.isEmpty() || !player.matches("[A-Za-z0-9_]{3,16}")) return;
-        queue("chat", player, message.substring(0, Math.min(350, message.length())), List.of());
+        queue("chat", player, message.substring(0, Math.min(350, message.length())), Collections.<String>emptyList());
     }
 
     @EventHandler(priority = EventPriority.MONITOR)
@@ -125,7 +146,7 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
         });
         if (joined) players.add(subject);
         players.sort(String.CASE_INSENSITIVE_ORDER);
-        return List.copyOf(players);
+        return Collections.unmodifiableList(new ArrayList<String>(players));
     }
 
     private void queue(String kind, String player, String message, List<String> players) {
@@ -141,7 +162,7 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
             JsonObject request = new JsonObject();
             request.addProperty("ack", lastAck);
             request.addProperty("epoch", epoch);
-            request.addProperty("pluginVersion", getPluginMeta().getVersion());
+            request.addProperty("pluginVersion", getDescription().getVersion());
             JsonArray sent = new JsonArray();
             for (OutgoingLine line : batch) {
                 JsonObject item = new JsonObject();
@@ -167,12 +188,7 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
                 logs.add("lines", lines);
                 request.add("serverLogs", logs);
             }
-            HttpRequest httpRequest = HttpRequest.newBuilder(endpoint)
-                .timeout(Duration.ofSeconds(8)).header("Authorization", "Bearer " + key)
-                .header("Content-Type", "application/json").POST(HttpRequest.BodyPublishers.ofString(request.toString())).build();
-            HttpResponse<String> response = http.send(httpRequest, HttpResponse.BodyHandlers.ofString());
-            if (response.statusCode() != 200) throw new IllegalStateException("平台 HTTP " + response.statusCode());
-            JsonObject body = JsonParser.parseString(response.body()).getAsJsonObject();
+            JsonObject body = JsonParser.parseString(post(request, 8000, true)).getAsJsonObject();
             boolean nextLogEnabled = body.has("logEnabled") && body.get("logEnabled").getAsBoolean();
             if (serverLogEnabled && logBatch != null) serverLogPosition = logBatch.end();
             if (!nextLogEnabled) serverLogInitialized = false;
@@ -183,7 +199,7 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
                 JsonObject item = element.getAsJsonObject();
                 long id = item.get("id").getAsLong();
                 if (id <= lastAck) continue;
-                Component text = render(item.getAsJsonArray("components"));
+                String text = render(item.getAsJsonArray("components"));
                 Bukkit.getScheduler().runTask(this, () -> Bukkit.getOnlinePlayers().forEach(player -> player.sendMessage(text)));
                 lastAck = id;
             }
@@ -194,7 +210,7 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
                 Throwable cause = error;
                 while (cause.getCause() != null && cause.getCause() != cause) cause = cause.getCause();
                 String detail = cause.getMessage();
-                String reason = cause.getClass().getSimpleName() + (detail == null || detail.isBlank() ? "" : "：" + detail);
+                String reason = cause.getClass().getSimpleName() + (detail == null || detail.trim().isEmpty() ? "" : "：" + detail);
                 getLogger().warning("平台聊天接口暂不可用（" + endpoint.getHost() + ":" + endpoint.getPort() + "）：" + reason);
                 lastWarn = now;
             }
@@ -220,7 +236,7 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
                 }
             }
             long start = serverLogPosition;
-            if (start >= size) return new LogBatch(start, start, List.of());
+            if (start >= size) return new LogBatch(start, start, Collections.<String>emptyList());
             int amount = (int)Math.min(65536, size - start);
             byte[] bytes = new byte[amount];
             int read;
@@ -228,7 +244,7 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
                 file.seek(start);
                 read = file.read(bytes);
             }
-            if (read <= 0) return new LogBatch(start, start, List.of());
+            if (read <= 0) return new LogBatch(start, start, Collections.<String>emptyList());
             int usable = -1;
             int lineCount = 0;
             for (int index = 0; index < read; index++) {
@@ -239,7 +255,7 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
                 }
             }
             if (usable < 0) {
-                if (read < 65536) return new LogBatch(start, start, List.of());
+                if (read < 65536) return new LogBatch(start, start, Collections.<String>emptyList());
                 usable = read;
             }
             String text = new String(bytes, 0, usable, StandardCharsets.UTF_8);
@@ -249,14 +265,14 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
                 lines.add(line.substring(0, Math.min(1000, line.length())));
                 if (lines.size() == 200) break;
             }
-            return new LogBatch(start, start + usable, List.copyOf(lines));
+            return new LogBatch(start, start + usable, Collections.unmodifiableList(new ArrayList<String>(lines)));
         } catch (Exception error) {
             return null;
         }
     }
 
     private void sendLifecycleNow(String kind) {
-        if (http == null || endpoint == null || key == null || key.isBlank()) return;
+        if (endpoint == null || key == null || key.trim().isEmpty()) return;
         try {
             JsonObject request = new JsonObject();
             request.addProperty("ack", lastAck);
@@ -267,10 +283,7 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
             item.addProperty("kind", kind);
             sent.add(item);
             request.add("sent", sent);
-            HttpRequest httpRequest = HttpRequest.newBuilder(endpoint)
-                .timeout(Duration.ofSeconds(3)).header("Authorization", "Bearer " + key)
-                .header("Content-Type", "application/json").POST(HttpRequest.BodyPublishers.ofString(request.toString())).build();
-            http.send(httpRequest, HttpResponse.BodyHandlers.discarding());
+            post(request, 3000, false);
         } catch (Exception error) {
             getLogger().warning("服务器关闭状态未能立即上报，后台将通过心跳超时判断。");
         }
@@ -316,21 +329,50 @@ public final class ChatBridgePlugin extends JavaPlugin implements Listener {
         }
     }
 
-    private Component render(JsonArray components) {
-        Component result = Component.empty();
+    private String post(JsonObject request, int timeoutMillis, boolean readBody) throws Exception {
+        HttpURLConnection connection = (HttpURLConnection)endpoint.toURL().openConnection();
+        connection.setConnectTimeout(Math.min(5000, timeoutMillis));
+        connection.setReadTimeout(timeoutMillis);
+        connection.setRequestMethod("POST");
+        connection.setRequestProperty("Authorization", "Bearer " + key);
+        connection.setRequestProperty("Content-Type", "application/json; charset=UTF-8");
+        connection.setDoOutput(true);
+        byte[] payload = request.toString().getBytes(StandardCharsets.UTF_8);
+        connection.setFixedLengthStreamingMode(payload.length);
+        try (OutputStream output = connection.getOutputStream()) { output.write(payload); }
+        int status = connection.getResponseCode();
+        if (status != HttpURLConnection.HTTP_OK) {
+            connection.disconnect();
+            throw new IllegalStateException("平台 HTTP " + status);
+        }
+        if (!readBody) { connection.disconnect(); return ""; }
+        StringBuilder body = new StringBuilder();
+        try (InputStream input = connection.getInputStream();
+             BufferedReader reader = new BufferedReader(new InputStreamReader(input, StandardCharsets.UTF_8))) {
+            String line;
+            while ((line = reader.readLine()) != null) body.append(line);
+        } finally { connection.disconnect(); }
+        return body.toString();
+    }
+
+    private String render(JsonArray components) {
+        StringBuilder result = new StringBuilder();
         for (JsonElement element : components) {
             JsonObject item = element.getAsJsonObject();
             String value = item.get("text").getAsString();
             if (value.length() > 512) continue;
-            Component part = Component.text(value);
-            if (item.has("color")) part = part.color(COLORS.getOrDefault(item.get("color").getAsString(), NamedTextColor.WHITE));
-            if (item.has("bold")) part = part.decoration(TextDecoration.BOLD, true);
-            if (item.has("italic")) part = part.decoration(TextDecoration.ITALIC, true);
-            if (item.has("underlined")) part = part.decoration(TextDecoration.UNDERLINED, true);
-            if (item.has("strikethrough")) part = part.decoration(TextDecoration.STRIKETHROUGH, true);
-            if (item.has("obfuscated")) part = part.decoration(TextDecoration.OBFUSCATED, true);
-            result = result.append(part);
+            result.append(ChatColor.RESET);
+            if (item.has("color")) {
+                ChatColor color = COLORS.get(item.get("color").getAsString());
+                result.append(color == null ? ChatColor.WHITE : color);
+            }
+            if (item.has("bold") && item.get("bold").getAsBoolean()) result.append(ChatColor.BOLD);
+            if (item.has("italic") && item.get("italic").getAsBoolean()) result.append(ChatColor.ITALIC);
+            if (item.has("underlined") && item.get("underlined").getAsBoolean()) result.append(ChatColor.UNDERLINE);
+            if (item.has("strikethrough") && item.get("strikethrough").getAsBoolean()) result.append(ChatColor.STRIKETHROUGH);
+            if (item.has("obfuscated") && item.get("obfuscated").getAsBoolean()) result.append(ChatColor.MAGIC);
+            result.append(value);
         }
-        return result;
+        return result.append(ChatColor.RESET).toString();
     }
 }
